update ipynb playgrounds

--- a/get_features/rnn/by_scenes_RNN.ipynb
+++ b/get_features/rnn/by_scenes_RNN.ipynb
@@ -1057,18 +1057,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<PrefetchDataset shapes: ((64, 10, 8, 396), (64, 10, 8, 396)), types: (tf.float64, tf.float64)>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-f3da75314b47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mBUFFER_SIZE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m dataset = (dataset\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;34m.\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBUFFER_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#     .batch(BATCH_SIZE, drop_remainder=True)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dataset' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1077,7 +1078,7 @@
     "\n",
     "dataset = (dataset\n",
     "    .shuffle(BUFFER_SIZE)\n",
-    "    .batch(BATCH_SIZE, drop_remainder=True)\n",
+    "#     .batch(BATCH_SIZE, drop_remainder=True)\n",
     "    .prefetch(tf.data.experimental.AUTOTUNE))\n",
     "\n",
     "dataset"
